...
      isScrollControlled: true,
      context: context,
      builder: (context) {
        return EditBoardForm(
          board,
          formType: initAsReadOnly ? FormType.read : FormType.create,
          key: const Key('boardForm'),
        );
      },
    );
  }
}

...
        ),
        const SizedBox(height: 20),
        Row(
          mainAxisAlignment: MainAxisAlignment.spaceAround,
          children: [
            ElevatedButton(
              key: const Key('boardFormEditButton'),
              style: readOnly
                  ? ElevatedButton.styleFrom(
                      backgroundColor: Theme.of(context).colorScheme.primary,
                      foregroundColor: Theme.of(context).colorScheme.onPrimary,
                    )
                  : null,
              onPressed:
                  formType == FormType.create ? cancelForm : toggleEditMode,
              child: Text(readOnly ? l10n.edit : l10n.cancel),
            ),
            FilledButton(
              key: const Key('boardFormDoneButton'),
              onPressed: formType == FormType.read ? null : sendForm,
              child: Text(l10n.done),
            ),
          ],
        )
      ],
...
