...
      isScrollControlled: true,
      context: context,
      builder: (context) {
        return EditTaskForm(
          task,
          formType: isNewTask ? FormType.create : FormType.read,
          key: const Key('taskForm'),
        );
      },
    );
  }
}

...
        ),
        const SizedBox(height: 20),
        Row(
          mainAxisAlignment: MainAxisAlignment.spaceAround,
          children: [
            ElevatedButton(
              key: const Key('editCancelButton'),
              style: readOnly
                  ? ElevatedButton.styleFrom(
                      backgroundColor: Theme.of(context).colorScheme.primary,
                      foregroundColor: Theme.of(context).colorScheme.onPrimary,
                    )
                  : null,
              onPressed:
                  formType == FormType.create ? cancelForm : toggleEditMode,
              child: Text(readOnly ? l10n.edit : l10n.cancel),
            ),
            FilledButton(
              key: const Key('doneButton'),
              onPressed: formType == FormType.read ? null : sendForm,
              child: Text(l10n.done),
            ),
          ],
        )
      ],
...
