...
            } else if (state is BoardLoadedState) {
              final boards = state.boards;

              if (state.boards.isEmpty) {
                return Center(
                  child: InfoDialog(
                    key: const Key('noBoardsYetDialog'),
                    title: l10n.noBoardsYet,
                    l10n.createYourFirstBoard,
                    onAccept: createBoard,
                  ),
                );
              }
...
                    );
                  } else {
                    return Center(
                      child: Padding(
                        padding: const EdgeInsets.only(left: 10, right: 20),
                        child: ElevatedButton(
                          key: const Key('addBoardButton'),
                          onPressed: createBoard,
                          child: const Icon(Icons.add),
                        ),
                      ),
                    );
                  }
...
