...
  "noBoardsYet": "You haven't created any boards yet!",
  "createYourFirstBoard": "Create your first board:",
  "newBoard": "New board",
  "creatingABoard": "Creating a new board",
  "editingABoard": "Editing a board",
  "readingABoard": "Reading a board",
  "newTask": "New task",
  "creatingATask": "Creating a new task",
  "editingATask": "Editing a task",
  "readingATask": "Reading a task",
  "mandatoryFields": "* mandatory fields!",
  "isMandatory": "is mandatory!",
  "boardName": "Board name",
...
  "addToEnd": "Add to end",
  "position": "Position",
  "index": "Index",
  "edit": "Edit",
  "cancel": "Cancel",
  "done": "Done",
  "ok": "Ok",
  "confirm": "Confirm",
  "tryAgain": "Try again",
  "delete": "Delete",
  "board": "Board",
  "task": "Task",
  "options": "Options",
...
